# Elden-Ring-Mods

./: .gitmodules  CMakeLists.txt  README.md
mods/attributeMod/: attributeGetters.cpp  attributeMod.cpp  attributeMod.hpp  code.txt
mods/barSize/: DLLMain.hpp  barSize.cpp  barSize.hpp  config.cpp
mods/damageMod/: code1.10.1.txt  config.cpp  damageMod.asm  damageMod.cpp  damageMod.hpp
mods/endlessNg/: ModUtils.h  code.txt  config.cpp  endlessNG.cpp  endlessNG.hpp  eventFlags.cpp  talk.py
mods/rallyMod/: ModUtils.h  code.txt  config.cpp  rallyMod.cpp  rallyMod.hpp
mods/talismanSlot/: code.txt  talismanSlot.cpp  talismanSlot.hpp
mods/uncapper/: ModUtils.h  capGetters.cpp  code.txt  config.cpp  uncapLevels.asm  uncapMod.cpp  uncapMod.h  uncapMod.hpp
mods/uncapper/ds2Levels/: LevelCost.csv  calc.py  ds2Levels.cpp
uncapper/: code.txt  code1.10.1.txt  uncapMod.cpp
utils/: ModUtils.h  ModUtils.hpp  config.hpp  eventFlags.hpp
